@@ -1,3 +1,8 @@
+2006-07-31  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/28523
+	* g++.dg/eh/cast1.C: New test.
+
 2006-07-29  Roger Sayle  <roger@eyesopen.com>
 
 	PR middle-end/28473
